--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "expo-speech": "^11.7.0",
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
+    "expo-stripe-checkout": "^1.0.1",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.8.2",
